--- a/MyOrganizer/App/Views/singleAddress.html
+++ b/MyOrganizer/App/Views/singleAddress.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<h1 class="col-sm-offset-2">single address</h1>
+<h1 class="col-sm-offset-2">{{singleAddress.FirstName}} {{singleAddress.LastName}}'s address details</h1>
 <div class="panel panel-body col-sm-8 col-sm-offset-2" id="singleAddress">
 
     <div class="row space">
