--- a/MyOrganizer/App/Views/newAddress.html
+++ b/MyOrganizer/App/Views/newAddress.html
@@ -54,7 +54,7 @@
             </div>
             <div class="form-group row">
                 <span class="span col-sm-3">RelationShip</span>
-                <select ng-model="newAddress.RelationShip" class="col-md-6">
+                <select ng-model="newAddress.RelationShip" class="col-sm-6">
                     <option>Family</option>
                     <option>Friend</option>
                     <option>Others</option>
