--- a/MyOrganizer/App/Views/singleMeeting.html
+++ b/MyOrganizer/App/Views/singleMeeting.html
@@ -18,6 +18,7 @@
 
 <h1 class="col-sm-offset-2">{{singleMeeting.MeetingName}} Meeting</h1>
 <div class="panel panel-body col-sm-8 col-sm-offset-2" id="singleMeeting">
+    <!--<div class="panel panel-default panel-body">-->
 
     <div class="row space">
         <span class="span col-sm-2">Meeting name:</span>
