--- a/MyOrganizer/App/Views/task.html
+++ b/MyOrganizer/App/Views/task.html
@@ -15,23 +15,26 @@
     </div>
 </div>
 
-
-<div class="MeetingList" >
-    <h1>Task List</h1>
-    <div class="searchText ">
-        <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
-    </div>
-    <div ng-repeat="task in tasksList | filter: searchText">
-        <div class="panel panel-default panel-body">
-             <div class="col-xs-8" >
-                 <a ng-href="#!/task/{{task.Id}}">
-                     <div class="col-xs-4">{{task.TaskName}} &nbsp; {{task.TaskDate}}</div>
-                     <div class="col-xs-2"> {{task.Description}} </div>
-                 </a>
+<div class="TBackground TaskList">
+    <div class="container">
+        <div class="searchText input-group col-sm-10  list">
+            <div class="TaskList col-sm-offset-2">
+                <h1 class="TTitle">Tasks List</h1>
+                <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
+             </div>
+            <div class="panel panel-success col-sm-10 col-sm-offset-2 list">
+                <div class="panel panel-success panel-heading title">{{UserName}}'s Tasks List</div>
+                <div ng-repeat="task in tasksList | filter: searchText">
+                    <div class="panel panel-success panel-body" id="item">
+                        <div class="col-sm-12">
+                            <a href="#!/task/{{task.Id}}">
+                                <div class="col-sm-8">{{task.TaskName}} &nbsp; {{task.TaskDate}}</div>
+                                <div class="col-sm-10"> {{task.Description}} </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-       </div>
-    </div>
+        </div>
+     </div>
 </div>
-
-
-
