--- a/MyOrganizer/Content/main.css
+++ b/MyOrganizer/Content/main.css
@@ -38,7 +38,7 @@ list Items
     margin-top: 20px;
 }
 
-#newAddressForm, #editAddressForm, #editMForm, #newMForm {
+#newAddressForm, #editAddressForm, #editMForm, #newMForm, #editTForm, #newTForm {
     border-color: green;
     border-style: solid;
     border-radius: 15px;
@@ -53,7 +53,7 @@ list Items
         text-align: center;
     }
 
-#inlineAbInputBox, #inlineMInputBox {
+#inlineAbInputBox, #inlineMInputBox, #inlineTInputBox {
     display: inline-block;
 }
 
@@ -78,11 +78,11 @@ list Items
     padding: 0;
 }
 
-.AbTitle , .MTitle {
+.AbTitle, .MTitle, .TTitle {
     font-family: 'Vast Shadow';
 }
 
-#singleAddress, #singleMeeting {
+#singleAddress, #singleMeeting, #singleTask {
     border-color: green;
     border-style: solid;
     border-radius: 15px;
