--- a/MyOrganizer/Views/Shared/_Layout.cshtml
+++ b/MyOrganizer/Views/Shared/_Layout.cshtml
@@ -10,21 +10,19 @@
 </head>
 <body ng-app="MyOrganizer">
     <div class="navbar navbar-inverse navbar-fixed-top mainnavbar">
-        @*<div class="container">*@
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"> 
-                    <li id="appName"> <a> My Organizer</a></li>
-                    <li><a ng-if='isloggedin()' ng-href="#!/addressbook">address book</a></li>
-                    <li><a ng-if='isloggedin()' ng-href="#!/task">hi</a></li>
-                    <li><a ng-if='isloggedin()' ng-href="#!/meeting">meeting</a></li>
-                    <li><a ng-if='isloggedin()' ng-click='logout()'  href= " ">logout </a></li>
-                </ul>
-            </div>
-        @*</div>*@
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav"> 
+                <li id="appName"> <a> My Organizer</a></li>
+                <li><a ng-if='isloggedin()' ng-href="#!/addressbook">address book</a></li>
+                <li><a ng-if='isloggedin()' ng-href="#!/task">Task</a></li>
+                <li><a ng-if='isloggedin()' ng-href="#!/meeting">meeting</a></li>
+                <li><a ng-if='isloggedin()' ng-click='logout()'  href= " ">logout </a></li>
+            </ul>
+        </div>
     </div>
     <div class="container body-content" id="bodyContainer">
         @RenderBody()
-        <hr />
+        @*<hr />*@
         <footer>
             <p id="footer">&copy; @DateTime.Now.Year - My Organizer App Sany Yousif</p>
         </footer>
