--- a/MyOrganizer/App/Views/home.html
+++ b/MyOrganizer/App/Views/home.html
@@ -2,36 +2,50 @@
     <div class="container">
         <div class="navbar-collapse collapse ">
             <ul class="nav navbar-nav navbar-left" ng-if='isLoggedIn()'>
-                <li><a href=""> {{UserName}}'s Address Book</a></li>
+                <li><a href=""> {{UserName}}  MyOrganizer</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a ng-if='isLoggedIn()' href="" ng-click='GetListToDo()' >To Do List</a></li>
+                <li><a ng-if='isLoggedIn()' href="" ng-click='GetListToDo()'>To Do List</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook" ng-click="getAddressBookList()">Address Book</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
-                <li><a ng-if='isLoggedIn()' href=" " ng-click='Logout()' >Logout </a></li>
+                <li><a ng-if='isLoggedIn()' href=" " ng-click='Logout()'>Logout </a></li>
             </ul>
         </div>
     </div>
 </div>
 
-<h2>hello {{UserName}} this is the Home page</h2>
 
-<div ng-repeat="item in TasksListToDo" class="ToDoList" ng-show="ToDoList" >
-    <div class="panel panel-default panel-body ">
-        <div class="col-xs-8">
-             <div class="col-xs-4">{{item.TaskName}} &nbsp; {{item.TaskDate}}</div>
-             <div class="col-xs-2"> {{item.Description}} </div>
-        </div>
-     </div>
-</div>
-
-<div ng-repeat="item2 in MeetingListToDo" class="ToDoList" ng-show="ToDoList">
-    <div class="panel panel-default panel-body ">
-        <div class="col-xs-8">
-            <div class="col-xs-4">{{item2.MeetingName}} &nbsp; {{item2.MeetingDate}}</div>
-            <div class="col-xs-2"> {{item2.Notes}} </div>
+<div class="container  panel panel-body ToDoList" ng-show="ToDoList">
+    <div class=" panel panel-body col-sm-8 col-sm-offset-2" id="TaskToDoList">
+        <div class="form-group ToDoTitle">you Task List</div>
+        <div class="form-group">
+            <div ng-repeat="item in TasksListToDo">
+                <div class="panel panel-default panel-body ">
+                    <div class="col-xs-10">
+                        <div class="col-xs-7">{{item.TaskName}} &nbsp; {{item.TaskDate}}</div>
+                        <div class="col-xs-4"> {{item.Description}} </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+<div class="container panel panel-body ToDoList" ng-show="ToDoList">
+    <div class=" col-sm-8 col-sm-offset-2" id="MeetingToDoList">
+        <div class="form-group ToDoTitle">you Meeting List</div>
+        <div class="form-group">
+            <div ng-repeat="item2 in MeetingListToDo">
+                <div class="panel panel-default panel-body ">
+                    <div class="col-xs-10">
+                        <div class="col-xs-7">{{item2.MeetingName}} &nbsp; {{item2.MeetingDate}}</div>
+                        <div class="col-xs-2"> {{item2.Notes}} </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
