--- a/MyOrganizer/App/Views/editMeeting.html
+++ b/MyOrganizer/App/Views/editMeeting.html
@@ -16,42 +16,33 @@
     </div>
 </div>
 
-<h3 class=" col-sm-6 col-sm-offset-3">Edit {{singleMeeting.MeetingName}} </h3>
-<div class="container">
-    <div class=" col-sm-6 col-sm-offset-2" id="editMForm">
-        <div class="form-group">
+<div id="newMeetingBackground">
+    <h3 class=" col-sm-6 col-sm-offset-3">Edit {{singleMeeting.MeetingName}} </h3>
+    <div class="container">
+        <div class=" col-sm-6 col-sm-offset-2" id="editMForm">
+            <div class="form-group">
 
-            <div class="form-group row">
-                <span class="span col-sm-3">MeetingName</span>
-                <div class="form-group">
-                    <input type="text" class="form-control " placeholder="singleMeeting.MeetingName" ng-model="singleMeeting.MeetingName" />
+                <div class="form-group row">
+                    <span class="span col-sm-3">MeetingName</span>
+                    <div class="form-group">
+                        <input type="text" class="form-control " placeholder="singleMeeting.MeetingName" ng-model="singleMeeting.MeetingName" />
+                    </div>
                 </div>
-            </div>
 
-            <!--<div class="form-group row">
-                <span class="span col-sm-3">MeetingDate</span>
-                <div class="form-group">
-                    <input type="text" class="form-control " placeholder="singleMeeting.MeetingDate" ng-model="singleMeeting.MeetingDate" />
-                    <input type="Date" class="form-control" placeholder="singleMeeting.MeetingDate" datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="singleMeeting.MeetingDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                    <span class="input-group-btn"></span>
+                <div class="form-group row">
+                    <span class="span col-sm-3">meeting date</span>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="singleMeeting.MeetingDate.ToShortDateString()" datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="singleMeeting.MeetingDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                        <span class="input-group-btn"></span>
+                    </div>
                 </div>
-            </div>-->
 
-
-            <div class="form-group row">
-                <span class="span col-sm-3">meeting date</span>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="singleMeeting.MeetingDate.ToShortDateString()" datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="singleMeeting.MeetingDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                    <span class="input-group-btn"></span>
+                <div class="form-group row">
+                    <span class="span col-sm-3">Notes</span>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="singleMeeting.Notes" ng-model="singleMeeting.Notes" />
+                    </div>
                 </div>
-             </div>
-
-            <div class="form-group row">
-                <span class="span col-sm-3">Notes</span>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="singleMeeting.Notes" ng-model="singleMeeting.Notes" />
-                </div>
-            </div>
 
             </div>
             <button class="btn btn-default " ng-click="editSingleMeeting(singleMeeting.Id)">Change</button>
@@ -63,4 +54,5 @@
             </div>
         </div>
     </div>
+</div>
 
