--- a/MyOrganizer/App/Views/meeting.html
+++ b/MyOrganizer/App/Views/meeting.html
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<div class="MBackground MeetingList">
+<div id="MeetingBackground">
     <div class="container">
         <div class="searchText input-group col-md-8 col-md-offset-2 list">
             <h1 class="MTitle">Meeting List</h1>
@@ -28,14 +28,14 @@
                 <a ng-href="#!/meeting/{{meeting.Id}}">
                     <div class="panel panel-success panel-body" id="meetingitem">
                         <div class="col-sm-8">
-                            <div class="col-sm-4">{{meeting.MeetingName}} &nbsp; {{meeting.MeetingDate}}</div>
+                            <div class="col-sm-4">{{meeting.MeetingName}} &nbsp; {{meeting.MeetingDate | date:"MM/dd/yyyy "}}</div>
                             <div class="col-sm-6"> {{meeting.Notes}} </div>
                         </div>
                     </div>
-                </a>      
-             </div>
+                </a>
+            </div>
         </div>
-     </div>
+    </div>
 </div>
 
 
