--- a/MyOrganizer/App/Views/newMeeting.html
+++ b/MyOrganizer/App/Views/newMeeting.html
@@ -15,61 +15,61 @@
     </div>
 </div>
 
-<h3 class=" col-md-6 col-md-offset-3">Add new Meeting</h3>
-<div class="container panel panel-body ">
-    <div class=" col-sm-6 col-sm-offset-2" id="newMForm">
-        <div class="form-group">
-            <div class="form-group row">
-               <span class="span col-sm-3">Meeting Name</span>
-               <input type="text" class="form-control col-sm-6" id="inlineMInputBox" placeholder="Meeting Name" ng-model="newMeeting.MeetingName" />
-            </div>
+<div id="newMeetingBackground">
+    <h3 class=" col-md-6 col-md-offset-3">Add new Meeting</h3>
+    <div class="container panel-body ">
+        <div class=" col-sm-6 col-sm-offset-2" id="newMForm">
+            <div class="form-group">
+                <div class="form-group row">
+                   <span class="span col-sm-3">Meeting Name</span>
+                   <input type="text" class="form-control col-sm-6" id="inlineMInputBox" placeholder="Meeting Name" ng-model="newMeeting.MeetingName" />
+                </div>
 
-            <div class="form-group row">
-                 <span class="span col-sm-3">Meeting Date</span>
-                 <input type="date" class="form-control" datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="newMeeting.MeetingDate" is-open="isOpened2" min-date="minDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                 <span class="input-group-btn"></span>
-            </div>
+                <div class="form-group row">
+                     <span class="span col-sm-3">Meeting Date</span>
+                     <input type="date" class="form-control" datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="newMeeting.MeetingDate" is-open="isOpened2" min-date="minDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                     <span class="input-group-btn"></span>
+                </div>
 
-            <div class="form-group row">
-                <span class="span col-sm-3">Notes</span>
-                <input type="text" class="form-control " id="inlineMInputBox" placeholder="Notes" ng-model="newMeeting.Notes" />
-            </div>
+                <div class="form-group row">
+                    <span class="span col-sm-3">Notes</span>
+                    <input type="text" class="form-control " id="inlineMInputBox" placeholder="Notes" ng-model="newMeeting.Notes" />
+                </div>
 
-            <div class="form-group row">
-                <span class="span col-sm-3">Repeate</span>
-                <input type="checkbox" class="checkbox " id="inlineMInputBox" ng-click="repeateMeeting = !repeateMeeting" />
-            </div>
+                <div class="form-group row">
+                    <span class="span col-sm-3">Repeate</span>
+                    <input type="checkbox" class="checkbox " id="inlineMInputBox" ng-click="repeateMeeting = !repeateMeeting" />
+                </div>
 
-             <div class="repeateMeeting" ng-show="repeateMeeting">
-                    <!--<label>Repeate every </label>-->
-                 <div class="form-group">
-                     <span class="span col-sm-3">Repeate every</span>
-                     <select ng-model="newMeeting.Interval">
-                         <option value="0">None</option>
-                         <option value="1">Daily</option>
-                         <option value="2">Weekly</option>
-                         <option value="3">Monthly</option>
-                     </select>
+                 <div class="repeateMeeting" ng-show="repeateMeeting">
+                     <div class="form-group">
+                         <span class="span col-sm-3">Repeate every</span>
+                         <select ng-model="newMeeting.Interval">
+                             <option value="0">None</option>
+                             <option value="1">Daily</option>
+                             <option value="2">Weekly</option>
+                             <option value="3">Monthly</option>
+                         </select>
+                     </div>
+                     <div class="form-group">
+                         <span class="span col-sm-3">Repeating Period</span>
+                         <select ng-model="newMeeting.Period">
+                             <option value="0">None</option>
+                             <option value="1">Week</option>
+                             <option value="2">Month</option>
+                             <option value="3">OneYear</option>
+                         </select>
+                     </div>
                  </div>
-                    <!--<label>Repeating Period </label>-->
-                 <div class="form-group">
-                     <span class="span col-sm-3">Repeating Period</span>
-                     <select ng-model="newMeeting.Period">
-                         <option value="0">None</option>
-                         <option value="1">Week</option>
-                         <option value="2">Month</option>
-                         <option value="3">OneYear</option>
-                     </select>
-                 </div>
-             </div>
 
-             <button class="btn btn-default " ng-click="addNewMeeting()">Submit</button>
+                 <button class="btn btn-default " ng-click="addNewMeeting()">Submit</button>
 
-             <div class="container">
-                 <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
-                     {{alert.msg}}
+                 <div class="container">
+                     <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + 'warning'" close="closeAlert($index)" class="alert col-xs-4 col-xs-offset-4">
+                         {{alert.msg}}
+                     </div>
                  </div>
              </div>
          </div>
-     </div>
+    </div>
 </div>
