--- a/MyOrganizer/App/Views/singleTask.html
+++ b/MyOrganizer/App/Views/singleTask.html
@@ -17,36 +17,36 @@
 </div>
 
 
-<h1 class="col-sm-offset-2">{{singleTask.TaskName}} Meeting</h1>
-<div class="panel panel-body col-sm-8 col-sm-offset-2" id="singleTask">
-
-    <div class="row space">
-        <span class="span col-sm-2">Task Date:</span>
-        <p class="col-sm-8"> {{singleTask.TaskDate}} </p>
-    </div>
-
-    <div class="row space">
-        <span class="span col-sm-2">Description:</span>
-        <p class="col-sm-8"> {{singleTask.Description}} </p>
-    </div>
-
-    <div class="row space">
-        <span class="span col-sm-2">Task name:</span>
-        <p class="col-sm-8"> {{singleTask.TaskName}} </p>
-    </div>
-
-
-    <div class="row space">
-        <div class="col-sm-4 ">
-            <button class=" btn btn-success glyphicon glyphicon-pencil" ng-click="editSingleTask(singleTask.Id)"></button>
-        </div>
-        <div class="col-sm-4 ">
-            <button class="btn btn-danger glyphicon glyphicon-trash" ng-click="deleteSingleTask(singleTask.Id)"></button>
+<div id="singleTaskBackground">
+    <h1 class="col-sm-offset-2">{{singleTask.TaskName}} details</h1>
+    <div class="panel panel-body col-sm-6 col-sm-offset-2" id="singleTask">
+        <div class="row space">
+            <span class="span col-sm-2">Task name:</span>
+            <p class="col-sm-8"> {{singleTask.TaskName}} </p>
         </div>
 
-        <div class="form-group ">
-            <span class="span col-sm-1">Done</span>
-            <input type="checkbox" class="checkbox " id="inlineMInputBox" ng-click="taskDone(singleTask.Id)" />
+        <div class="row space">
+            <span class="span col-sm-2">Task Date:</span>
+            <p class="col-sm-8"> {{singleTask.TaskDate | date:"MM/dd/yyyy "}} </p>
+        </div>
+
+        <div class="row space">
+            <span class="span col-sm-2">Description:</span>
+            <p class="col-sm-8"> {{singleTask.Description}} </p>
+        </div>
+
+        <div class="row space">
+            <div class="col-sm-4 ">
+                <button class=" btn btn-success glyphicon glyphicon-pencil" ng-click="editSingleTask(singleTask.Id)"></button>
+            </div>
+            <div class="col-sm-4 ">
+                <button class="btn btn-danger glyphicon glyphicon-trash" ng-click="deleteSingleTask(singleTask.Id)"></button>
+            </div>
+
+            <div class="form-group ">
+                <span class="span col-sm-1">Done</span>
+                <input type="checkbox" class="checkbox " id="inlineMInputBox" ng-click="taskDone(singleTask.Id)" />
+            </div>
         </div>
     </div>
 </div>
