--- a/MyOrganizer/Content/main.css
+++ b/MyOrganizer/Content/main.css
@@ -24,12 +24,11 @@ nav bar and footer
 list Items
 ##############################*/
 .title {
-    font-size: 2.2rem;
-    color:white;
+    font-size: 3rem;
 }
 
 #item {
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: black;
     background-color: #f0fff0;
 }
@@ -45,6 +44,7 @@ list Items
     padding: 30px 30px;
     background-color: cornsilk;
     margin-top: 20px;
+    margin-bottom:30px;
 }
 
     
@@ -61,11 +61,11 @@ list Items
     font-weight: bold;
 }
 
-.AbBackground, .MBackground {
+ /*.MBackground {
     background-image: url("/Picture/ABList3.jpg");
     background-repeat:no-repeat;
     background-size: cover;
-}
+}*/
 
 #bodyContainer {
     margin: 0;
@@ -95,31 +95,133 @@ list Items
     margin: 20px 10px;
 }
 
-#TaskToDoList {
-    border-color: green;
-    border-style: solid;
-    border-radius: 15px;
-    padding: 30px 30px;
-    background-color: cornsilk;
-    margin-top: 20px;
-    border-width:thick;
-}
+/*##############################
+To Do list Items
+##############################*/
 
-#MeetingToDoList {
-    border-color: darkblue;
+#TaskToDoList, #MeetingToDoList {
+    border-color: grey;
     border-style: solid;
     border-radius: 15px;
     padding: 30px 30px;
     background-color: gainsboro;
     margin-top: 20px;
-    border-width: thick;
+    border-width: 2px;
+}
+
+#TListToDoItemBg, #MListToDoItemBg {
+    background-color: #ffffe0;
+    color: black;
+    font-size: 2rem;
+    /*font-weight:bold;*/
 }
 
 .ToDoTitle {
-    color:brown;
-    font-size:1.5rem;
-    text-align :center;
-    font-weight:bold;
+    color: brown;
+    font-size: 3rem;
+    text-align: center;
+    font-weight: bolder;
+}
+
+/*##############################
+background pictures
+##############################*/
+
+#HomeBackground {
+    background: url("/Picture/LOGO 8.png");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    opacity: .8;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position:fixed;
+}
+
+#AbBackground {
+    background: url("/Picture/addressBookBg.jpg");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position:relative;
+    margin-bottom:30px;
+    /*margin-top:10px;*/
+}
+
+#newAbBackground,#singleAbBackground {
+    background: url("/Picture/addressBookBg.jpg");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+#TaskBackground {
+    background: url("/Picture/TaskBackground.jpg");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+#newTaskBackground, #singleTaskBackground {
+    background: url("/Picture/TaskBackground.jpg");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+#MeetingBackground {
+    background: url("/Picture/MeetingBackground.jpg");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+#newMeetingBackground, #singleMeetingBackground {
+    background: url("/Picture/MeetingBackground.jpg");
+    background-repeat: no-repeat;
+    background-color: #f5f5dc;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+/*##############################
+login page 
+##############################*/
+.loginBackground {
+    background: url("/Picture/logo66.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*background-color: #d3d3d3;*/
+    opacity: .9;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
 }
 
 
