--- a/MyOrganizer/App/Views/newAddress.html
+++ b/MyOrganizer/App/Views/newAddress.html
@@ -16,7 +16,7 @@
 </div>
 
 <div id="newAbBackground">
-    <h3 class=" col-md-6 col-md-offset-3">Add new address</h3>
+    <h3 class=" col-md-6 col-md-offset-3 AbTitle">Add new address</h3>
     <div class="container">
         <div class=" col-sm-6 col-sm-offset-2" id="newAddressForm" >
             <div class="form-group">
@@ -54,8 +54,8 @@
                     <input type="text" class="form-control col-sm-6 "  id="inlineInputBox" placeholder="Zipcode" ng-model="newAddress.Zipcode" />
                 </div>
                 <div class="form-group row">
-                    <span class="span col-sm-3">RelationShip</span>
-                    <select ng-model="newAddress.RelationShip" class="col-sm-6">
+                    <span class="span col-sm-4">RelationShip</span>
+                    <select ng-model="newAddress.RelationShip" class="col-sm-4">
                         <option>Family</option>
                         <option>Friend</option>
                         <option>Others</option>
