--- a/MyOrganizer/App/Views/singleAddress.html
+++ b/MyOrganizer/App/Views/singleAddress.html
@@ -17,8 +17,8 @@
 </div>
 
 <div id="singleAbBackground">
-    <h1 class="col-sm-offset-2">{{singleAddress.FirstName}} {{singleAddress.LastName}}'s address details</h1>
-    <div class="panel panel-body col-sm-8 col-sm-offset-2" id="singleAddress">
+    <h1 class="col-sm-offset-2 AbTitle" >{{singleAddress.FirstName}} {{singleAddress.LastName}}'s address details</h1>
+    <div class="panel panel-body col-sm-7 col-sm-offset-2" id="singleAddress">
 
         <div class="row space">
             <span class="span col-sm-2">Name:</span>
@@ -37,7 +37,7 @@
 
         <div class="row space">
              <span class="span col-sm-2">Address:</span>
-             <div class="col-xs-6">{{singleAddress.Street}}  &nbsp;{{singleAddress.City}} &nbsp;.{{singleAddress.State}},{{singleAddress.Zipcode}}
+             <div class="col-xs-9">{{singleAddress.Street}}  &nbsp;{{singleAddress.City}} &nbsp;.{{singleAddress.State}},{{singleAddress.Zipcode}}
              </div>
          </div>
 
