--- a/MyOrganizer/App/Views/singleMeeting.html
+++ b/MyOrganizer/App/Views/singleMeeting.html
@@ -17,20 +17,20 @@
 </div>
 
 <div id="singleMeetingBackground">
-    <h1 class="col-sm-offset-2">{{singleMeeting.MeetingName}} details</h1>
+    <h1 class="col-sm-offset-2 AbTitle">{{singleMeeting.MeetingName}} details</h1>
     <div class="panel panel-body col-sm-8 col-sm-offset-2" id="singleMeeting">
         <div class="row space">
-            <span class="span col-sm-2">Meeting name:</span>
+            <span class="span col-sm-3">Meeting name:</span>
             <p class="col-sm-8"> {{singleMeeting.MeetingName}} </p>
         </div>
 
         <div class="row space">
-            <span class="span col-sm-2">Meeting date:</span>
+            <span class="span col-sm-3">Meeting date:</span>
             <p class="col-sm-8"> {{singleMeeting.MeetingDate | date:"MM/dd/yyyy"}} </p>
         </div>
 
         <div class="row space">
-            <span class="span col-sm-2">Meeting Notes:</span>
+            <span class="span col-sm-3">Meeting Notes:</span>
             <p class="col-sm-8">{{singleMeeting.Notes}} </p>
         </div>
 
