--- a/MyOrganizer/App/Views/addressBook.html
+++ b/MyOrganizer/App/Views/addressBook.html
@@ -21,14 +21,14 @@
              <h1 class="AbTitle">Address Book List</h1>
              <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
          </div>
-         <div class="panel panel-success col-md-8 col-md-offset-2 list" >
-             <div class="panel panel-heading title">{{UserName}}'s Address Book </div>
+         <div class="panel panelListTitle col-sm-8 col-sm-offset-2 list" id="ListFrame">
+             <div class="panel panel-heading title" id="listTitle">{{UserName}}'s Address Book </div>
                  <div ng-repeat="address in addressBookList | filter: searchText">
                      <a href="#!/addressBook/{{address.Id}}">
-                         <div class="panel panel-success panel-body" id="item" >
-                             <div class="col-xs-8">
-                                 <div class="col-xs-6">{{address.FirstName}} &nbsp; {{address.LastName}}</div>
-                                 <div class="col-xs-2"> {{address.Tel}} </div>
+                         <div class="panel panel-success panel-body " id="ListItems" >
+                             <div class="col-xs-10 ">
+                                 <div class="col-xs-4">{{address.FirstName}} &nbsp; {{address.LastName}}</div>             
+                                 <div class="col-xs-6"> {{address.Tel}} </div>
                              </div>
                          </div>
                      </a>         
