--- a/MyOrganizer/App/Views/editAddress.html
+++ b/MyOrganizer/App/Views/editAddress.html
@@ -17,7 +17,7 @@
 </div>
 
 <div id="AbBackground">
-    <h3 class=" col-sm-6 col-sm-offset-3">Edit {{singleAddress.FirstName}} Address</h3>
+    <h3 class=" col-sm-6 col-sm-offset-3 AbTitle">Edit {{singleAddress.FirstName}} Address</h3>
     <div class="container">
         <div class=" col-sm-6 col-sm-offset-2" id="editAddressForm">
             <div class="form-group">
@@ -79,7 +79,7 @@
                  </div>
 
                 <div class="form-group row">
-                    <span class="span col-sm-3">RelationShip</span>
+                    <span class="span col-sm-4">RelationShip</span>
                     <div class="form-group">
                         <select ng-model="singleAddress.RelationShip">
                             <option>Family</option>
