--- a/MyOrganizer/App/Views/editTask.html
+++ b/MyOrganizer/App/Views/editTask.html
@@ -17,9 +17,9 @@
 </div>
 
 <div id="newTaskBackground">
-    <h3 class=" col-sm-6 col-sm-offset-3">Edit {{singleTask.TaskName}} </h3>
+    <h3 class=" col-sm-6 col-sm-offset-3 AbTitle">Edit {{singleTask.TaskName}} </h3>
     <div class="container">
-        <div class=" col-sm-6 col-sm-offset-2" id="editTForm">
+        <div class=" col-sm-7 col-sm-offset-2" id="editTForm">
             <div class="form-group">
                 <div class="form-group row">
                     <span class="span col-sm-3">Task name</span>
