--- a/MyOrganizer/App/Views/meeting.html
+++ b/MyOrganizer/App/Views/meeting.html
@@ -22,11 +22,11 @@
             <input type="text" class="input-lg" placeholder="Search For ..." ng-model="searchText">
         </div>
 
-        <div class="panel panel-success col-md-8 col-md-offset-2 list">
-            <div class="panel panel-success panel-heading title">{{UserName}}'s Meeting List</div>
+        <div class="panel panelListTitle col-sm-8 col-sm-offset-2 list" id="ListFrame">
+            <div class="panel panel-heading title" id="listTitle">{{UserName}}'s Meeting List</div>
             <div ng-repeat="meeting in meetingList | filter: searchText">
                 <a ng-href="#!/meeting/{{meeting.Id}}">
-                    <div class="panel panel-success panel-body" id="meetingitem">
+                    <div class="panel panel-success panel-body" id="ListItems">
                         <div class="col-sm-8">
                             <div class="col-sm-4">{{meeting.MeetingName}} &nbsp; {{meeting.MeetingDate | date:"MM/dd/yyyy "}}</div>
                             <div class="col-sm-6"> {{meeting.Notes}} </div>
