--- a/MyOrganizer/Content/main.css
+++ b/MyOrganizer/Content/main.css
@@ -27,24 +27,41 @@ list Items
     font-size: 3rem;
 }
 
-#item {
+#ListItems {
     font-size: 2rem;
     color: black;
     background-color: #f0fff0;
+    margin: 15px;
+    box-shadow: 5px 5px 5px #bbb0b0;
+    border: 1px solid grey;
 }
+#ListFrame {
+    box-shadow: 5px 5px 5px #9c6767;
+    border: 1px solid grey;
+}
+
+#listTitle {
+    box-shadow: 5px 5px 5px #bbb0b0;
+    border: 1px solid grey;
+    background-color: lightcyan;
+}
+
 
 .list {
     margin-top: 20px;
 }
 
 #newAddressForm, #editAddressForm, #editMForm, #newMForm, #editTForm, #newTForm {
-    border-color: green;
+    border-color: brown;
     border-style: solid;
     border-radius: 15px;
     padding: 30px 30px;
     background-color: cornsilk;
     margin-top: 20px;
-    margin-bottom:30px;
+    margin-bottom: 30px;
+    box-shadow: 5px 5px 5px #938787;
+    border: 1px solid grey;
+    font-size: 2rem;
 }
 
     
@@ -61,12 +78,6 @@ list Items
     font-weight: bold;
 }
 
- /*.MBackground {
-    background-image: url("/Picture/ABList3.jpg");
-    background-repeat:no-repeat;
-    background-size: cover;
-}*/
-
 #bodyContainer {
     margin: 0;
     padding: 0;
@@ -80,15 +91,19 @@ list Items
 
 .AbTitle, .MTitle, .TTitle {
     font-family: 'Vast Shadow';
+    font-size:3rem;
 }
 
 #singleAddress, #singleMeeting, #singleTask {
-    border-color: green;
+    border-color: #1e2453;
     border-style: solid;
     border-radius: 15px;
     padding: 30px 30px;
     background-color: cornsilk;
     margin-top: 20px;
+    box-shadow: 5px 5px 5px #938787;
+    border: 1px solid grey;
+    font-size:2rem;
 }
 
 .space {
@@ -123,21 +138,44 @@ To Do list Items
     font-weight: bolder;
 }
 
-/*##############################
+.panelListTitle {
+    color: brown;
+    padding-top: 30px;
+    background-color:deeppink;
+    border:solid 2px pink;
+}
+
+    .panelListItem {
+
+    }
+
+.frame {
+    box-shadow: 3px 3px 3px grey;
+    border: 1px solid grey;
+    border-radius: 3px;
+}
+
+.panelItems {
+    margin: 15px;
+    box-shadow: 10px 10px 5px grey;
+    border: 1px solid grey;
+}
+
+    /*##############################
 background pictures
 ##############################*/
+    #HomeBackground {
+        background: url("/Picture/LOGO 8.png");
+        background-repeat: no-repeat;
+        background-color: #f5f5dc;
+        background-size: cover;
+        opacity: .8;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+    }
 
-#HomeBackground {
-    background: url("/Picture/LOGO 8.png");
-    background-repeat: no-repeat;
-    background-color: #f5f5dc;
-    background-size: cover;
-    opacity: .8;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    position:fixed;
-}
 
 #AbBackground {
     background: url("/Picture/addressBookBg.jpg");
