--- a/MyOrganizer/App/Views/home.html
+++ b/MyOrganizer/App/Views/home.html
@@ -5,7 +5,6 @@
                 <li><a href=""> {{UserName}}  MyOrganizer</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a ng-if='isLoggedIn()' href="" ng-click='GetListToDo()'>To Do List</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/addressBook" ng-click="getAddressBookList()">Address Book</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/task">Task</a></li>
                 <li><a ng-if='isLoggedIn()' ng-href="#!/meeting">Meeting</a></li>
@@ -15,31 +14,38 @@
     </div>
 </div>
 
-<div id="HomeBackground"  >
-    <div class="container ToDoList"  ng-show="ToDoList">
-        <!--<div class="container ">-->
-        <div class=" panel panel-body col-sm-10 col-sm-offset-1 " id="TaskToDoList" >
-            <div class="form-group ToDoTitle">YOUR TASK LIST</div>
+<div id="HomeBackground">
+
+    <div><br><br><br>
+        <div class="panel-heading col-xs-3 col-sm-offset-1 inlineDiv" >
+            <h2 id="summaryTitle" >MyOrganizer</h2>
+            <h4 id="summaryDetails" > you can user the MyOrganize App to save your addressBook , meetings and tasks. and you can search, edit and delete each item of these. also you can check your tasks due this month in the home page.</h4>
+            <h2 id="summaryTitle" >AddressBooks</h2>
+            <h2 id="summaryTitle" >Tasks</h2>
+            <h2 id="summaryTitle" >Meetings</h2>
+            <br>
+        </div>
+    </div>
+
+    <div class="container ToDoList inlineDiv">
+        <div class=" panel panel-body col-sm-10 col-sm-offset-1 " id="TaskToDoList">
+            <div class="form-group ToDoTitle AbTitle">TASK LIST</div>
             <div class="form-group ">
                 <div ng-repeat="item in TasksListToDo">
-                    <div class="panel panel-default panel-body col-xs-10" id="TListToDoItemBg">
-                        <!--<div class="col-xs-10">-->
-                            <div class="col-xs-7">{{item.TaskName}} &nbsp; {{item.TaskDate | date:"MM/dd/yyyy "}}</div>
-                            <div class="col-xs-4"> {{item.Description}} </div>
-                        <!--</div>-->
+                    <div class="panel panel-default panel-body col-xs-10 col-sm-offset-1 " id="TListToDoItemBg">
+                        <div class="col-xs-7">{{item.TaskName}} &nbsp; {{item.TaskDate | date:"MM/dd/yyyy "}}</div>
+                        <div class="col-xs-5"> {{item.Description}} </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class=" panel panel-body col-sm-10 col-sm-offset-1" id="MeetingToDoList" >
-            <div class="form-group ToDoTitle">YOUR MEETING LIST</div>
+        <div class=" panel panel-body col-sm-10 col-sm-offset-1" id="MeetingToDoList">
+            <div class="form-group ToDoTitle AbTitle">MEETING LIST</div>
             <div class="form-group">
                 <div ng-repeat="item2 in MeetingListToDo">
-                    <div class="panel panel-default panel-body col-xs-10" id="MListToDoItemBg">
-                        <!--<div class="col-xs-10">-->
-                            <div class="col-xs-7">{{item2.MeetingName}} &nbsp; {{item2.MeetingDate | date:"MM/dd/yyyy "}}</div>
-                            <div class="col-xs-2"> {{item2.Notes}} </div>
-                        <!--</div>-->
+                    <div class="panel panel-default panel-body col-xs-10 col-sm-offset-1 " id="MListToDoItemBg">
+                        <div class="col-xs-7">{{item2.MeetingName}} &nbsp; {{item2.MeetingDate | date:"MM/dd/yyyy "}}</div>
+                        <div class="col-xs-5"> {{item2.Notes}} </div>
                     </div>
                 </div>
             </div>
